@@ -86,3 +86,7 @@ P d3_12r2a.out $samtools mpileup -ABQ0 -a -l xx.bed2 xx#depth1.bam xx#depth2.bam
 P d4_12.out  $samtools mpileup -ABQ0 -a -a            xx#depth1.bam xx#depth2.bam | perl -lane 'print "$F[0]\t$F[1]\t$F[3]\t$F[6]"'
 P d4_12r.out $samtools mpileup -ABQ0 -a -a -r xx:5-16 xx#depth1.bam xx#depth2.bam | perl -lane 'print "$F[0]\t$F[1]\t$F[3]\t$F[6]"'
 P d4_12b.out $samtools mpileup -ABQ0 -a -a -l xx.bed  xx#depth1.bam xx#depth2.bam | perl -lane 'print "$F[0]\t$F[1]\t$F[3]\t$F[6]"'
+
+# With and without -J (include deletions)
+P d6_wdel.out  $samtools depth -J depth_del.sam
+P d6_nodel.out $samtools depth    depth_del.sam
